@@ -1,5 +1,8 @@
 1999-03-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
+	* directory.m (create_class_refs): New internal function
+	find_primitive.  Rename find to do non-primitive lookup.
+
 	* directory.h (JINSTANTIATEUSING): Remove FROMCLASS and FROMOBJECT
 	variants.  All are objects.
 
